--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,1 +1,7 @@
-
+server:
+  port: 8182
+myscep:
+  hsm:
+    ip: 192.168.10.133
+    port: 8005
+hsmUrl: http://${myscep.hsm.ip}:${myscep.hsm.port}/api/v1
